# lark-poetry-test

./: EdgeDBScope.md  Lex.md  README.md  YuruScop.md  gram.md  pyproject.toml
json-example/: __main__.py  json.lark
lark_poetry/: __main__.py
lark_poetry/grammar/: grammar.lark  identifiers  keywordrulegenerator.py  keywords.lark  tokenize.lark
