[tool.poetry]
name = "lark-poetry"
version = "0.1.0"
description = ""
authors = ["Kim, Hyeonseo <dodok8@gmail.com>"]
readme = "README.md"
packages = [{include = "lark_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.4"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
